# indo0

./: .dockerignore  .gitignore  README.md  netlify.toml  railway.core.toml  railway.json  railway.streaming.toml  railway.toml
.github/workflows/: backend.yml  build-images.yml  chaos.yml  frontend.yml  model-retrain.yml  owasp-zap.yml  security-scan.yml
sindio/: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  DEPLOY.md  Dockerfile.placeholder  README.md  dev.sh  ecosystem.config.cjs  netlify.toml  requirements.txt  serve.py
sindio/app/: __init__.py  main.py
sindio/backend/: alembic.ini  conftest.py  requirements.txt
sindio/backend/core/: Dockerfile  Dockerfile.core  README.md  conftest.py  entrypoint.sh  pyproject.toml  test_scratch.py
sindio/backend/core/app/: auth.py  config.py  database.py  main.py  scheduler.py  worker.py
sindio/backend/core/app/dependencies/: auth.py
sindio/backend/core/app/ingestion/: __init__.py  base.py  kenya_power.py  kodi.py  kplc_fetcher.py  models.py  nairobi_water_fetcher.py  nms.py  osm_fetcher.py  runner.py  weather_fetcher.py  worldpop.py
sindio/backend/core/app/ingestion/real_sources/: __init__.py  chirps_fetcher.py  esa_worldcover_fetcher.py  here_traffic_fetcher.py  kenya_railways_fetcher.py  nairobi_sidewalks_fetcher.py  nairobi_waste_fetcher.py  nasa_power_fetcher.py  opensky_fetcher.py  viirs_fetcher.py  world_bank_fetcher.py
sindio/backend/core/app/models/: __init__.py  encoders_graph.py  encoders_temporal.py  encoders_vision.py  fusion.py  graph_utils.py  heads.py  losses.py  sindio_foundation.py
sindio/backend/core/app/routers/: alerts.py  dashboard.py  health.py  infrastructure.py  monitor.py  schedule.py  simulation_compat.py  simulations.py  training.py
sindio/backend/core/app/services/: agent_workflow.py  alert_generator.py  alert_scheduler.py  data_fusion.py  data_quality_metrics.py  explanation_generator.py  fallback_data.py  inference_queue.py  ingest_geospatial.py  long_interval_scheduler.py  long_window_classifier.py  memory_service.py  model_registry.py  playbook_engine.py  qdrant_cache.py  rag_inference.py  rag_ingestion.py  retriever.py  retry_utils.py  scenario_generator.py  search_service.py  simulation_engine.py  stress_classifier.py  temporal_spacing.py
sindio/backend/core/app/services/monitor/: __init__.py  baseline.py  ingestion.py  monitor.py  registry.py  reports.py  stress.py
sindio/backend/core/app/services/physics/: cascade_detector.py  power_sim.py  road_sim.py  water_sim.py
sindio/backend/core/app/training/: data_loader.py  train_mobility_model.py  train_model.py  train_stress_model.py  train_water_model.py  trainer.py
sindio/backend/core/playbooks/: cascading_failure.yaml  density_driven_power.yaml  density_driven_water_stress.yaml  encroachment_driven_sidewalk.yaml  recurring_seasonal_stress.yaml
sindio/backend/core/tests/: test_data_quality_metrics.py  test_fallback_data.py  test_integration.py  test_long_interval_alert_pipeline.py  test_model_registry.py  test_monitor.py  test_monitor_services.py  test_monitor_stress.py  test_retry.py  test_routes.py  test_stress_classifier.py  test_temporal_spacing.py  test_temporal_spacing_long_intervals.py
sindio/backend/streaming/: Cargo.toml  Dockerfile
sindio/backend/streaming/src/: main.rs
sindio/backend/streaming/src/mobility/: aggregation.rs  db.rs  main.rs  models.rs  retry.rs  source.rs
sindio/data/: .discover_history.json  data_sources_candidates.json
(+225 files in other folders)
