[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sindio-core"
version = "0.1.0"
description = "Sindio ML inference, simulation orchestration, and data processing core"
authors = ["Sindio Team <team@sindio.urban>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.5.3"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
pyarrow = "^15.0.0"
torch = "^2.2.0"
transformers = "^4.37.0"
sentence-transformers = "^2.3.0"
openai = "^1.12.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
redis = "^5.0.0"
celery = {version = "^5.3.0", extras = ["redis"]}
apscheduler = "^3.10.0"
qdrant-client = "^1.8.0"
# unstructured = {version = "^0.13.0", extras = ["pdf", "docx", "local-inference"]}
# spacy = "^3.7.0"
python-dotenv = "^1.0.0"
geopandas = "^0.14.0"
shapely = "^2.0.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
xarray = "^2024.1.0"
rasterio = "^1.3.10"
rioxarray = "^0.15.0"
tqdm = "^4.66.0"
ray = {version = "^2.9.0", extras = ["default"]}
pandapower = "^2.13.0"
elasticsearch = {version = "^8.12.0", extras = ["async"]}
faiss-cpu = "^1.8.0"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
prometheus-client = "^0.20.0"
beautifulsoup4 = "^4.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
structlog = "^24.1.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
sindio-core = "app.main:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
